Loading Clientlib Main

--- a/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/page.html
+++ b/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/page.html
@@ -1,1 +1,14 @@
-Base Html Page
+<!doctype html>
+<html lang="en">
+<head>
+    <sly data-sly-include="partials/headlibs.html" data-sly-unwrap/>
+</head>
+<body>
+    <div>
+        Base Html Page
+    </div>
+    <script>
+
+    </script>
+</body>
+</html>
