ClientLibs - Transitive Dependencies

--- a/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/partials/headlibs.html
+++ b/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/partials/headlibs.html
@@ -4,4 +4,4 @@
 <!--/* Include the site client libraries */-->
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html" data-sly-call="${clientLib.js @ categories='clientlibs.example.clientlib.main'}" data-sly-unwrap/>
 
-<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html" data-sly-call="${clientLib.js @ categories='clientlibs.example.embed'}" data-sly-unwrap/>
+<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html" data-sly-call="${clientLib.js @ categories='clientlibs.example.dependencies'}" data-sly-unwrap/>
