--- a/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/partials/headlibs.html
+++ b/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/partials/headlibs.html
@@ -5,3 +5,5 @@
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html" data-sly-call="${clientLib.js @ categories='clientlibs.example.clientlib.main'}" data-sly-unwrap/>
 
 <sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html" data-sly-call="${clientLib.js @ categories='clientlibs.example.embed'}" data-sly-unwrap/>
+<!--/* Won't Work in Publish Environment */-->
+<sly data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html" data-sly-call="${clientLib.js @ categories='clientlibs.example.clientlib.components'}" data-sly-unwrap/>
