Clientlibs - Final Changes

--- a/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/page.html
+++ b/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/page.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!--<sly data-sly-include="partials/headlibs.html" data-sly-unwrap/>-->
+    <sly data-sly-include="partials/headlibs.html" data-sly-unwrap/>
 </head>
 <body>
     <div>
@@ -9,6 +9,8 @@
 
         <div data-sly-resource="${ @path='par', resourceType='foundation/components/parsys'}" data-sly-unwrap/>
     </div>
+
+    Embed -> Embed.one -> Embed.two -> Embed.three
     <script>
 
     </script>
